# EulerFun

./: CMakeLists.txt
1/: CMakeLists.txt
1/src/: CMakeLists.txt  calculate.cpp  calculate.h  main.cpp
1/test/: CMakeLists.txt  calculate_test.cpp
2/: CMakeLists.txt
2/src/: CMakeLists.txt  fibonacci.cpp  fibonacci.h  main.cpp
2/test/: CMakeLists.txt  fibonacci_test.cpp
3/: CMakeLists.txt
3/src/: CMakeLists.txt  main.cpp  primefactor.cpp  primefactor.h
3/test/: CMakeLists.txt  primefactor_test.cpp
4/: CMakeLists.txt
4/src/: CMakeLists.txt  lpp.cpp  lpp.h  main.cpp
4/test/: CMakeLists.txt  lpp_test.cpp
